--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,6 +1,4 @@
 ---
-// import logo from "../assets/astro.svg"; // Replace with your actual logo
-// import heroImage from "../assets/hero-image.svg"; // Optional hero visual
 import "../styles/global.css";
 import Navbar from "./Navbar.tsx";
 import WelcomeHero from "./Welcome/Hero.tsx";
@@ -12,10 +10,10 @@ import ContactSection from "./Welcome/ContactSection.tsx";
 ---
 
 <div
-    class="min-h-screen bg-gradient-to-br from-white to-gray-100 text-emerald-800 font-sans"
+    class="min-h-screen bg-linear-to-br from-white to-gray-100 text-emerald-800 font-sans"
 >
     <div id="root">
-        <div class="min-h-screen bg-gradient-to-b from-slate-50 to-white">
+        <div class="min-h-screen bg-linear-to-b from-slate-50 to-white">
             <Navbar />
             <WelcomeHero />
             <OurPrincipalsSection />
