Move navbar to the layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Navbar from "../components/Navbar.tsx";
+---
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -8,6 +12,7 @@
         <title>EthicalTech UK</title>
     </head>
     <body>
+        <Navbar />
         <slot />
     </body>
 </html>
