--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,6 +1,5 @@
 ---
 import "../styles/global.css";
-import Navbar from "./Navbar.tsx";
 import WelcomeHero from "./Welcome/Hero.tsx";
 import Footer from "./Welcome/Footer.tsx";
 import OurPrincipalsSection from "./Welcome/OurPrincipalsSection.tsx";
@@ -14,7 +13,7 @@ import ContactSection from "./Welcome/ContactSection.tsx";
 >
     <div id="root">
         <div class="min-h-screen bg-linear-to-b from-slate-50 to-white">
-            <Navbar />
+            <!-- <Navbar /> -->
             <WelcomeHero />
             <OurPrincipalsSection />
             <WhatWeDoSection />
