Move footer and styles to layout instead of welcome component.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
+import "../styles/global.css";
 import Navbar from "../components/Navbar.tsx";
+import Footer from "../components/Footer.tsx";
 ---
 
 <!doctype html>
@@ -14,6 +16,7 @@ import Navbar from "../components/Navbar.tsx";
     <body>
         <Navbar />
         <slot />
+        <Footer />
     </body>
 </html>
 
