--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,9 @@ import Footer from "../components/Footer.tsx";
     </head>
     <body>
         <Navbar />
-        <slot />
+        <div class="mt-16">
+            <slot />
+        </div>
         <Footer />
     </body>
 </html>
