Create about page.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Footer from "../components/Footer.tsx";
     </head>
     <body>
         <Navbar />
-        <div class="mt-16">
+        <div class="mt-16 mb-8 py-8">
             <slot />
         </div>
         <Footer />
